welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:40: error: not found: value c
		faireV(c)
                       ^MethodsPicture:46: error: not found: value N
	avanceNbPas(N)
                    ^